# calculator-cpp

./: .clang-format  .gitignore  BUILD  BUILD.sh  CMakeLists.txt  README.md  build.sh
.github/workflows/: cmake-single-platform.yml
include/: calculator.h  calculator.hpp  constants.hpp  expression.hpp  expressionNode.hpp  integrate.hpp  literal.hpp  symbol.hpp
include/integrate/: monteCarlo.hpp  tanh-sinh.hpp  tanhSinh.hpp
scripts/: BUILD.sh  format.sh
src/: calculator.cpp  expression.cpp  expressionNode.cpp  integrate.cpp  literal.cpp  main.cpp  symbol.cpp
src/integrate/: monteCarlo.cpp  tanh-sinh.cpp  tanhSinh.cpp
